# tascade

./: .coverage  .env.example  .gitignore  AGENTS.md  AGENTS.task.md  LICENSE  Makefile  README.md  mcp-server.sh  pyproject.toml
.serena/: project.yml
app/: __init__.py  db.py  main.py  mcp_server.py  mcp_tools.py  metrics_jobs.py  models.py  schemas.py  store.py
docs/: ARCHITECTURE.md  BACKLOG.md  MANIFESTO.md  PRD.md  README.md  RUNBOOK.md  SRS.md  WHY.md
etc/: task_ids.md
scripts/: benchmark_metrics_jobs.py  create_api_key.py  postgres_mcp_smoke.py  postgres_smoke.py  report_implemented_readiness.py  rollback_metrics.sh  smoke_test_metrics.py  validate_dq_rules.py
tests/: conftest.py  test_artifacts.py  test_auth.py  test_claim_heartbeat.py  test_db_bootstrap.py  test_gate_checkpoints.py  test_gate_decisions.py  test_gate_task_classes.py  test_integration_attempts.py  test_list_tasks.py  test_mcp_error_normalization.py  test_mcp_tools.py  test_metrics_actions.py  test_metrics_alerts.py  test_metrics_api.py  test_metrics_authz.py  test_metrics_forecast.py  test_metrics_formulas.py  test_metrics_jobs.py  test_metrics_materializer.py  test_metrics_permissions.py  test_metrics_reconciliation.py  test_plan_changesets.py  test_postgres_array_mapping.py  test_postgres_backing.py  test_postgres_enum_mapping.py  test_postgres_uuid_mapping.py  test_project_graph.py  test_projects.py  test_report_implemented_readiness.py  test_static_serving.py  test_task_state_transitions.py  test_tasks_dependencies.py
web/: index.html  package-lock.json  package.json  vite.config.ts  (+1 more)
(+135 files in other folders)
