[project]
name = "tascade"
version = "0.1.0"
description = "Minimal vertical-slice coordinator for agentic task orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "uvicorn>=0.35.0",
  "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mcp>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
